# TGBOT_GSM

./: .env  docker-compose.env  docker-compose.yml  manage.py  pyproject.toml
docker/nginx/: default_location
tgbot/: admin.py  handlers.py  models.py
tgbot/management/commands/: startbot.py
tgbot/migrations/: 0001_initial.py  0002_news_userbot.py  0002_remove_brand_category_brand_category.py  0003_alter_brand_category.py  0003_alter_userbot_user_id.py
tgbot_avito/: asgi.py  settings.py  urls.py  wsgi.py
