[tool.poetry]
name = "tgbot-avito"
version = "0.1.0"
description = ""
authors = ["It Soda <nikshchegilskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
django-extensions = "3.2.3"
redis = "4.6.0"
pytelegrambotapi = "4.13.0"
mysqlclient = "2.1.1"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"
djangochannelsrestframework = "^1.2.0"
python-decouple = "^3.8"
telebot = "^0.0.5"



[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
isort = "5.10.1"
black = "23.10.1"
coverage = "7.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"